Sort Arrows in Table

--- a/app/assets/stylesheets/section.scss
+++ b/app/assets/stylesheets/section.scss
@@ -2,6 +2,20 @@
 
   background: #fff;
 
+  .table {
+
+    .arrow {
+      margin-left: 5px;
+      text-decoration: none;
+
+      &.hide {
+       display: none;
+      }
+    }
+
+  }
+
+
   .filter {
 
     .c-card__item {
