--- a/app/views/ui/index.html.slim
+++ b/app/views/ui/index.html.slim
@@ -5,7 +5,7 @@
 
   section#root.container
     .o-grid
-      .column3.o-grid__cell.o-grid__cell--width-75
+      .column3.o-grid__cell.o-grid__cell--width-75.table
         == react_component('Table')
       .o-grid__cell.o-grid__cell--width-25.filter
         == react_component('Filter')
